--- a/XamFormsWithSvg/XamFormsWithSvg/MainPage.xaml
+++ b/XamFormsWithSvg/XamFormsWithSvg/MainPage.xaml
@@ -2,10 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:XamFormsWithSvg"
+		     xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"             
              x:Class="XamFormsWithSvg.MainPage">
 
-	<Label Text="Welcome to Xamarin.Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+    <ffimageloadingsvg:SvgCachedImage WidthRequest="200" HeightRequest="200" Source="resource://XamFormsWithSvg.sample.svg"/>
 
 </ContentPage>
